--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,29 @@ build/
 
 ### VS Code ###
 .vscode/
+front/node_modules
+# Logs
+front/logs
+front/*.log
+front/npm-debug.log*
+front/yarn-debug.log*
+front/yarn-error.log*
+front/pnpm-debug.log*
+front/lerna-debug.log*
+front/
+front/node_modules
+front/dist
+front/dist-ssr
+front/*.local
+front/
+front/# Editor directories and files
+front/.vscode/*
+front/!.vscode/extensions.json
+front/.idea
+front/.DS_Store
+front/*.suo
+front/*.ntvs*
+front/*.njsproj
+front/*.sln
+front/*.sw?
+
